--- a/Unsupervised/Linear_Discriminant _Analysis.ipynb
+++ b/Unsupervised/Linear_Discriminant _Analysis.ipynb
@@ -48,42 +48,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6.2</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>2.9</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>5.6</td>\n",
        "      <td>1.8</td>\n",
        "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.1</td>\n",
+       "      <th>1</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
        "      <td>1.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.4</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.9</td>\n",
        "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -92,18 +92,18 @@
       ],
       "text/plain": [
        "   sepal length in cm  sepal width in cm  petal length in cm  \\\n",
-       "0                 6.2                2.9                 4.3   \n",
-       "1                 6.4                2.9                 4.3   \n",
-       "2                 6.7                2.5                 5.8   \n",
-       "3                 6.0                2.7                 5.1   \n",
-       "4                 6.7                3.1                 5.6   \n",
+       "0                 6.3                2.9                 5.6   \n",
+       "1                 4.7                3.2                 1.6   \n",
+       "2                 7.2                3.0                 5.8   \n",
+       "3                 5.5                2.4                 3.7   \n",
+       "4                 6.4                2.7                 5.3   \n",
        "\n",
        "   petal width in cm      class label  \n",
-       "0                1.3  Iris-versicolor  \n",
-       "1                1.3  Iris-versicolor  \n",
-       "2                1.8   Iris-virginica  \n",
-       "3                1.6  Iris-versicolor  \n",
-       "4                2.4   Iris-virginica  "
+       "0                1.8   Iris-virginica  \n",
+       "1                0.2      Iris-setosa  \n",
+       "2                1.6   Iris-virginica  \n",
+       "3                1.0  Iris-versicolor  \n",
+       "4                1.9   Iris-virginica  "
       ]
      },
      "execution_count": 2,
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,6 @@
     "        sorted_pairs = self.return_sorted_eig_val_eig_vec(*self.eig_vals_eig_vecs(X_))[:self.k]\n",
     "        self.sorted_paires = sorted_pairs\n",
     "        W = np.zeros((self.num_features,self.k))\n",
-    "        \n",
     "        for i in range(self.k):\n",
     "            W[:,i] = sorted_pairs[i][1].T\n",
     "        self.W = W\n",
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
