--- a/Unsupervised/LDA_homework.ipynb
+++ b/Unsupervised/LDA_homework.ipynb
@@ -48,42 +48,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.2</td>\n",
+       "      <td>5.6</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>Iris-virginica</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>3.7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2.3</td>\n",
        "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -92,18 +92,18 @@
       ],
       "text/plain": [
        "   sepal length in cm  sepal width in cm  petal length in cm  \\\n",
-       "0                 6.3                2.9                 5.6   \n",
-       "1                 4.7                3.2                 1.6   \n",
-       "2                 7.2                3.0                 5.8   \n",
-       "3                 5.5                2.4                 3.7   \n",
-       "4                 6.4                2.7                 5.3   \n",
+       "0                 5.0                2.3                 3.3   \n",
+       "1                 5.1                2.5                 3.0   \n",
+       "2                 5.6                3.0                 4.1   \n",
+       "3                 5.0                2.0                 3.5   \n",
+       "4                 7.7                2.6                 6.9   \n",
        "\n",
        "   petal width in cm      class label  \n",
-       "0                1.8   Iris-virginica  \n",
-       "1                0.2      Iris-setosa  \n",
-       "2                1.6   Iris-virginica  \n",
+       "0                1.0  Iris-versicolor  \n",
+       "1                1.1  Iris-versicolor  \n",
+       "2                1.3  Iris-versicolor  \n",
        "3                1.0  Iris-versicolor  \n",
-       "4                1.9   Iris-virginica  "
+       "4                2.3   Iris-virginica  "
       ]
      },
      "execution_count": 2,
@@ -257,14 +257,7 @@
     "        output will be N*N matrix\n",
     "        Don't Forget reshape rows and means to vectors \n",
     "        \"\"\"\n",
-    "        samples = self.class_samples(X = X, Y = Y, class_number = class_number)\n",
-    "        class_sc_mat = np.zeros((self.num_features,self.num_features))        \n",
-    "        for row in samples:\n",
-    "            row = row.T.reshape(-1,1)\n",
-    "            one_class_means = one_class_means.T.reshape(-1,1)\n",
-    "            class_sc_mat += (np.dot((row - one_class_means), (row - one_class_means).T))\n",
-    "        return class_sc_mat\n",
-    "        \n",
+    "\n",
     "    def compute_within_class_scatter_matrix(self, X, Y, class_means):\n",
     "        \"\"\"\n",
     "        This method compute within_class_scatter_matrix for all classes\n",
@@ -272,13 +265,7 @@
     "        output will be N*N matrix\n",
     "        Don't Forget reshape rows and means to vectors \n",
     "        \"\"\"\n",
-    "        with_sc_mat = np.zeros((self.num_features,self.num_features))\n",
-    "        for cl_num in range(1,self.num_classes + 1):\n",
-    "            with_sc_mat += self.compute_within_class_scatter_matrix_for_one_class(X = X,\n",
-    "                                                                                  Y = Y,\n",
-    "                                                                                  class_number=cl_num,\n",
-    "                                                                                  one_class_means=class_means[cl_num-1])\n",
-    "        return with_sc_mat\n",
+    "  \n",
     "    \n",
     "    def compute_between_class_scatter_matrix_for_one_class(self, X, Y, class_number,one_class_means,overal_mean):\n",
     "        \"\"\"\n",
@@ -287,12 +274,7 @@
     "        output will be N*N matrix\n",
     "        Don't Forget reshape rows and means to vectors \n",
     "        \"\"\"\n",
-    "        samples = self.class_samples(X = X, Y = Y, class_number = class_number)\n",
-    "        M = samples.shape[0]\n",
-    "        overal_mean = overal_mean.T.reshape(-1,1)\n",
-    "        one_class_means = one_class_means.T.reshape(-1,1)\n",
-    "        return M*np.dot((one_class_means-overal_mean),(one_class_means-overal_mean).T)\n",
-    "    \n",
+    "\n",
     "    def compute_between_class_scatter_matrix(self, X, Y, class_means,overal_mean):\n",
     "        \"\"\"\n",
     "        This method return between class scatter matrix for all class,\n",
@@ -300,14 +282,7 @@
     "        output will be N*N matrix\n",
     "        Don't Forget reshape rows and means to vectors \n",
     "        \"\"\"\n",
-    "        betw_sc_mat = np.zeros((self.num_features,self.num_features))\n",
-    "        for cl_num in range(1,self.num_classes + 1):\n",
-    "            betw_sc_mat += self.compute_between_class_scatter_matrix_for_one_class(X = X, Y = Y,\n",
-    "                                                                                   class_number=cl_num,\n",
-    "                                                                                   one_class_means=class_means[cl_num-1],\n",
-    "                                                                                   overal_mean=overal_mean)\n",
-    "        return betw_sc_mat\n",
-    "    \n",
+    " \n",
     "    def eig_vals_eig_vecs(self,X_):\n",
     "        \"\"\"\n",
     "        This method compute and return eig. vals and eig. vecs:\n",
@@ -388,29 +363,13 @@
     "        8.Transpose selected vectors\n",
     "    \n",
     "        \"\"\"\n",
-    "        self.num_classes = np.unique(Y).shape[0]\n",
-    "        self.num_features = X.shape[1]\n",
-    "        print(\"Linear Discriminant analysis\")\n",
-    "        class_means = self.compute_class_means(X,y)\n",
-    "        overal_mean = self.compute_overal_mean(X)\n",
-    "        S_W = self.compute_within_class_scatter_matrix(X, y,class_means)\n",
-    "        S_B = self.compute_between_class_scatter_matrix(X,y,class_means,overal_mean)\n",
-    "        X_ = np.linalg.inv(S_W).dot(S_B)\n",
-    "        sorted_pairs = self.return_sorted_eig_val_eig_vec(*self.eig_vals_eig_vecs(X_))[:self.k]\n",
-    "        self.sorted_paires = sorted_pairs\n",
-    "        W = np.zeros((self.num_features,self.k))\n",
-    "        for i in range(self.k):\n",
-    "            W[:,i] = sorted_pairs[i][1].T\n",
-    "        self.W = W\n",
+    "\n",
     "    \n",
     "    def fit_transform(self, X, Y):\n",
     "        \"\"\"\n",
     "        Fit and transforme data\n",
     "        return X*W\n",
-    "        \"\"\"\n",
-    "        self.fit(X, Y)\n",
-    "        X_ = np.dot(X,self.W)\n",
-    "        return X_"
+    "        \"\"\"\n"
    ]
   },
   {
