--- a/Neural_Networks/Fully_Connected/Baseline_for_MNIST.ipynb
+++ b/Neural_Networks/Fully_Connected/Baseline_for_MNIST.ipynb
@@ -75,6 +75,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
