--- a/Tensorflow/Simple_models/Linear_Softmax_Classifier.ipynb
+++ b/Tensorflow/Simple_models/Linear_Softmax_Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "menumend",
    "language": "python",
-   "name": "python3"
+   "name": "menumend"
   },
   "language_info": {
    "codemirror_mode": {
