--- a/Tensorflow/Introduction/TF_intro.ipynb
+++ b/Tensorflow/Introduction/TF_intro.ipynb
@@ -1006,9 +1006,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "menumend",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "menumend"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
