Add Data_gen,data_aug,modifid cs seminar, add content in main_models

--- a/Deep_Learning/CNNs/Seminar_ComputerVision.ipynb
+++ b/Deep_Learning/CNNs/Seminar_ComputerVision.ipynb
@@ -147,6 +147,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](./img/feature_maps.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Input volume size: $W$ \n",
     "* Filter/kernel size: $F$ \n",
     "* Stride: $S$\n",
