--- a/Deep_Learning/NLP/TF-IDF_vectorizer.ipynb
+++ b/Deep_Learning/NLP/TF-IDF_vectorizer.ipynb
@@ -1,11 +1,524 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TF-IDF stands for “Term Frequency — Inverse Data Frequency”\n",
+    "<br>\n",
+    "<br> Term Frequency (tf): gives us the frequency of the word in each document in the corpus. It is the ratio of number of times the word appears in a document compared to the total number of words in that document. It increases as the number of occurrences of that word within the document increases. Each document has its own tf.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./img/tf.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>Inverse Data Frequency (idf): used to calculate the weight of rare words across all documents in the corpus. The words that occur rarely in the corpus have a high IDF score. It is given by the equation below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./img/idf.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combining these two we come up with the TF-IDF score (w) for a word in a document in the corpus. It is the product of tf and idf:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./img/tf_idf.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+    "from sklearn.decomposition import NMF, LatentDirichletAllocation\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [\n",
+    "'This is the first document.',\n",
+    "'This document is the second document.',\n",
+    "'And this is the third one.',\n",
+    "'Is this the first document?',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data = X.todense(),columns = vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>and</th>\n",
+       "      <th>document</th>\n",
+       "      <th>first</th>\n",
+       "      <th>is</th>\n",
+       "      <th>one</th>\n",
+       "      <th>second</th>\n",
+       "      <th>the</th>\n",
+       "      <th>third</th>\n",
+       "      <th>this</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.469791</td>\n",
+       "      <td>0.580286</td>\n",
+       "      <td>0.384085</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.384085</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.384085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.687624</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.281089</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.538648</td>\n",
+       "      <td>0.281089</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.281089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.511849</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.267104</td>\n",
+       "      <td>0.511849</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.267104</td>\n",
+       "      <td>0.511849</td>\n",
+       "      <td>0.267104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.469791</td>\n",
+       "      <td>0.580286</td>\n",
+       "      <td>0.384085</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.384085</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.384085</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        and  document     first        is       one    second       the  \\\n",
+       "0  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
+       "1  0.000000  0.687624  0.000000  0.281089  0.000000  0.538648  0.281089   \n",
+       "2  0.511849  0.000000  0.000000  0.267104  0.511849  0.000000  0.267104   \n",
+       "3  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
+       "\n",
+       "      third      this  \n",
+       "0  0.000000  0.384085  \n",
+       "1  0.000000  0.281089  \n",
+       "2  0.511849  0.267104  \n",
+       "3  0.000000  0.384085  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_samples = 2000\n",
+    "n_features = 1000\n",
+    "n_components = 10\n",
+    "n_top_words = 20\n",
+    "\n",
+    "\n",
+    "def print_top_words(model, feature_names, n_top_words):\n",
+    "    for topic_idx, topic in enumerate(model.components_):\n",
+    "        message = \"Topic #%d: \" % topic_idx\n",
+    "        message += \" \".join([feature_names[i]\n",
+    "                             for i in topic.argsort()[:-n_top_words - 1:-1]])\n",
+    "        print(message)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset...\n",
+      "done in 1.101s.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Loading dataset...\")\n",
+    "t0 = time()\n",
+    "dataset = fetch_20newsgroups(shuffle=True, random_state=1,\n",
+    "                             remove=('headers', 'footers', 'quotes'))\n",
+    "data_samples = dataset.data[:n_samples]\n",
+    "print(\"done in %0.3fs.\" % (time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting tf-idf features for NMF...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Extracting tf-idf features for NMF...\")\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_df=0.95, min_df=2,\n",
+    "                                   max_features=n_features,\n",
+    "                                   stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done in 0.241s.\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "tfidf = tfidf_vectorizer.fit_transform(data_samples)\n",
+    "print(\"done in %0.3fs.\" % (time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
+       "                          evaluate_every=-1, learning_decay=0.7,\n",
+       "                          learning_method='online', learning_offset=50.0,\n",
+       "                          max_doc_update_iter=100, max_iter=5,\n",
+       "                          mean_change_tol=0.001, n_components=10, n_jobs=None,\n",
+       "                          perp_tol=0.1, random_state=0, topic_word_prior=None,\n",
+       "                          total_samples=1000000.0, verbose=0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda = LatentDirichletAllocation(n_components=n_components, max_iter=5,\n",
+    "                                learning_method='online',\n",
+    "                                learning_offset=50.,\n",
+    "                                random_state=0)\n",
+    "lda.fit(tfidf)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset...\n",
+      "done in 16.648s.\n",
+      "Extracting tf-idf features for NMF...\n",
+      "done in 0.270s.\n",
+      "Extracting tf features for LDA...\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Load the 20 newsgroups dataset and vectorize it. We use a few heuristics\n",
+    "# to filter out useless terms early on: the posts are stripped of headers,\n",
+    "# footers and quoted replies, and common English words, words occurring in\n",
+    "# only one document or in at least 95% of the documents are removed.\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Use tf-idf features for NMF.\n",
+    "print(\"Extracting tf-idf features for NMF...\")\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_df=0.95, min_df=2,\n",
+    "                                   max_features=n_features,\n",
+    "                                   stop_words='english')\n",
+    "\n",
+    "\n",
+    "# Use tf (raw term count) features for LDA.\n",
+    "print(\"Extracting tf features for LDA...\")\n",
+    "tf_vectorizer = CountVectorizer(max_df=0.95, min_df=2,\n",
+    "                                max_features=n_features,\n",
+    "                                stop_words='english')\n",
+    "t0 = time()\n",
+    "tf = tf_vectorizer.fit_transform(data_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting the NMF model (Frobenius norm) with tf-idf features, n_samples=2000 and n_features=1000...\n",
+      "done in 0.244s.\n",
+      "\n",
+      "Topics in NMF model (Frobenius norm):\n",
+      "Topic #0: just people don think like know time good make way really say right ve want did ll new use years\n",
+      "Topic #1: windows use dos using window program os drivers application help software pc running ms screen files version card code work\n",
+      "Topic #2: god jesus bible faith christian christ christians does heaven sin believe lord life church mary atheism belief human love religion\n",
+      "Topic #3: thanks know does mail advance hi info interested email anybody looking card help like appreciated information send list video need\n",
+      "Topic #4: car cars tires miles 00 new engine insurance price condition oil power speed good 000 brake year models used bought\n",
+      "Topic #5: edu soon com send university internet mit ftp mail cc pub article information hope program mac email home contact blood\n",
+      "Topic #6: file problem files format win sound ftp pub read save site help image available create copy running memory self version\n",
+      "Topic #7: game team games year win play season players nhl runs goal hockey toronto division flyers player defense leafs bad teams\n",
+      "Topic #8: drive drives hard disk floppy software card mac computer power scsi controller apple mb 00 pc rom sale problem internal\n",
+      "Topic #9: key chip clipper keys encryption government public use secure enforcement phone nsa communications law encrypted security clinton used legal standard\n",
+      "\n",
+      "Fitting the NMF model (generalized Kullback-Leibler divergence) with tf-idf features, n_samples=2000 and n_features=1000...\n",
+      "done in 0.939s.\n",
+      "\n",
+      "Topics in NMF model (generalized Kullback-Leibler divergence):\n",
+      "Topic #0: just people don like did know make really right think say things time look way didn ve course probably good\n",
+      "Topic #1: help thanks windows know hi need using does looking anybody appreciated card mail software use info email ftp available pc\n",
+      "Topic #2: does god believe know mean true christians read point jesus christian church come people fact says religion say agree bible\n",
+      "Topic #3: know thanks mail interested like new just bike email edu advance want contact really list heard com post hear information\n",
+      "Topic #4: 10 new 30 12 20 50 11 sale 16 15 time 14 old power ago good 100 great offer cost\n",
+      "Topic #5: number 1993 data subject government new numbers provide information space following com research include large note group major time talk\n",
+      "Topic #6: edu problem file com remember try soon article mike files code program sun free send think cases manager little called\n",
+      "Topic #7: game year team games world fact second case won said win division play best clearly claim allow example used doesn\n",
+      "Topic #8: think don drive hard need bit mac make sure read apple going comes disk computer case pretty drives software ve\n",
+      "Topic #9: good just use like doesn got way don ll going does chip better doing bad key want sure bit car\n",
+      "\n",
+      "Fitting LDA models with tf features, n_samples=2000 and n_features=1000...\n",
+      "done in 2.575s.\n",
+      "\n",
+      "Topics in LDA model:\n",
+      "Topic #0: edu com mail send graphics ftp pub available contact university list faq ca information cs 1993 program sun uk mit\n",
+      "Topic #1: don like just know think ve way use right good going make sure ll point got need really time doesn\n",
+      "Topic #2: christian think atheism faith pittsburgh new bible radio games alt lot just religion like book read play time subject believe\n",
+      "Topic #3: drive disk windows thanks use card drives hard version pc software file using scsi help does new dos controller 16\n",
+      "Topic #4: hiv health aids disease april medical care research 1993 light information study national service test led 10 page new drug\n",
+      "Topic #5: god people does just good don jesus say israel way life know true fact time law want believe make think\n",
+      "Topic #6: 55 10 11 18 15 team game 19 period play 23 12 13 flyers 20 25 22 17 24 16\n",
+      "Topic #7: car year just cars new engine like bike good oil insurance better tires 000 thing speed model brake driving performance\n",
+      "Topic #8: people said did just didn know time like went think children came come don took years say dead told started\n",
+      "Topic #9: key space law government public use encryption earth section security moon probe enforcement keys states lunar military crime surface technology\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the NMF model\n",
+    "print(\"Fitting the NMF model (Frobenius norm) with tf-idf features, \"\n",
+    "      \"n_samples=%d and n_features=%d...\"\n",
+    "      % (n_samples, n_features))\n",
+    "t0 = time()\n",
+    "nmf = NMF(n_components=n_components, random_state=1,\n",
+    "          alpha=.1, l1_ratio=.5).fit(tfidf)\n",
+    "print(\"done in %0.3fs.\" % (time() - t0))\n",
+    "\n",
+    "print(\"\\nTopics in NMF model (Frobenius norm):\")\n",
+    "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
+    "print_top_words(nmf, tfidf_feature_names, n_top_words)\n",
+    "\n",
+    "# Fit the NMF model\n",
+    "print(\"Fitting the NMF model (generalized Kullback-Leibler divergence) with \"\n",
+    "      \"tf-idf features, n_samples=%d and n_features=%d...\"\n",
+    "      % (n_samples, n_features))\n",
+    "t0 = time()\n",
+    "nmf = NMF(n_components=n_components, random_state=1,\n",
+    "          beta_loss='kullback-leibler', solver='mu', max_iter=1000, alpha=.1,\n",
+    "          l1_ratio=.5).fit(tfidf)\n",
+    "print(\"done in %0.3fs.\" % (time() - t0))\n",
+    "\n",
+    "print(\"\\nTopics in NMF model (generalized Kullback-Leibler divergence):\")\n",
+    "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
+    "print_top_words(nmf, tfidf_feature_names, n_top_words)\n",
+    "\n",
+    "print(\"Fitting LDA models with tf features, \"\n",
+    "      \"n_samples=%d and n_features=%d...\"\n",
+    "      % (n_samples, n_features))\n",
+    "lda = LatentDirichletAllocation(n_components=n_components, max_iter=5,\n",
+    "                                learning_method='online',\n",
+    "                                learning_offset=50.,\n",
+    "                                random_state=0)\n",
+    "t0 = time()\n",
+    "lda.fit(tf)\n",
+    "print(\"done in %0.3fs.\" % (time() - t0))\n",
+    "\n",
+    "print(\"\\nTopics in LDA model:\")\n",
+    "tf_feature_names = tf_vectorizer.get_feature_names()\n",
+    "print_top_words(lda, tf_feature_names, n_top_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "referances: https://scikit-learn.org/stable/auto_examples/applications/plot_topics_extraction_with_nmf_lda.html#sphx-glr-auto-examples-applications-plot-topics-extraction-with-nmf-lda-py\n",
+    "<br>\n",
+    "https://www.freecodecamp.org/news/how-to-process-textual-data-using-tf-idf-in-python-cd2bbc0a94a3/"
+   ]
   }
  ],
  "metadata": {
