Add Gensim word2vec and Spacy ner

--- a/Deep_Learning/NLP/Feature_Extraction_from_text.ipynb
+++ b/Deep_Learning/NLP/Feature_Extraction_from_text.ipynb
@@ -81,20 +81,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = [\n",
-    "'This is the first document.',\n",
-    "'This document is the second document.',\n",
-    "'And this is the third one.',\n",
-    "'Is this the first document?',\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -119,6 +105,49 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data = X.todense(),columns = vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/4*np.log2(4/4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [\n",
+    "'This is the first document.',\n",
+    "'This document is the second document.',\n",
+    "'And this is the third one.',\n",
+    "'Is this the first document?',\n",
+    "]"
    ]
   },
   {
