--- a/Deep_Learning/NLP/Language_Model_with_nltk.ipynb
+++ b/Deep_Learning/NLP/Language_Model_with_nltk.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "from collections import Counter, defaultdict\n",
     "import numpy as np\n",
-    "from nltk import bigrams, trigrams\n"
+    "from nltk import bigrams, trigrams\n",
+    "import random"
    ]
   },
   {
@@ -28,14 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package reuters to /root/nltk_data...\n"
+      "[nltk_data] Downloading package reuters to /root/nltk_data...\n",
+      "[nltk_data]   Package reuters is already up-to-date!\n"
      ]
     },
     {
@@ -44,7 +46,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -72,7 +74,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +206,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "generated_text = generate_text_frequency(counts,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['51',\n",
+       " '>',\n",
+       " 'WHITE',\n",
+       " 'danger',\n",
+       " 'Thursday',\n",
+       " '520',\n",
+       " 'The',\n",
+       " ';',\n",
+       " 'Mint',\n",
+       " 'day',\n",
+       " '319',\n",
+       " 'package',\n",
+       " 'Wang',\n",
+       " 'T',\n",
+       " '000',\n",
+       " 'ADAMS',\n",
+       " 'with',\n",
+       " 'Prev',\n",
+       " 'would',\n",
+       " 'the',\n",
+       " 'Ammar',\n",
+       " '25p',\n",
+       " '.',\n",
+       " 'analyst',\n",
+       " 'First',\n",
+       " 'CALLED',\n",
+       " 'be',\n",
+       " 'interview',\n",
+       " 'before',\n",
+       " 'Safeway',\n",
+       " 'pretax',\n",
+       " 'share',\n",
+       " '3',\n",
+       " ',',\n",
+       " 'of',\n",
+       " '000',\n",
+       " 'of',\n",
+       " 'for',\n",
+       " 'of',\n",
+       " 'Products',\n",
+       " 'stake',\n",
+       " '000',\n",
+       " 'Miguel',\n",
+       " 'U',\n",
+       " \"'\",\n",
+       " 'dlr',\n",
+       " 'SETS',\n",
+       " 'use',\n",
+       " 'of',\n",
+       " 'be',\n",
+       " 'BY',\n",
+       " 'the',\n",
+       " 'by',\n",
+       " '38',\n",
+       " 'ENERGY',\n",
+       " 'be',\n",
+       " '>',\n",
+       " 'LTC',\n",
+       " 'it',\n",
+       " 'West',\n",
+       " '12',\n",
+       " ',\"',\n",
+       " '.\"',\n",
+       " 'schedule',\n",
+       " '.',\n",
+       " '.',\n",
+       " 'lt',\n",
+       " 'on',\n",
+       " 'unlikely',\n",
+       " 'in',\n",
+       " 'UNP',\n",
+       " 'deal',\n",
+       " 'simply',\n",
+       " 'the',\n",
+       " 'and',\n",
+       " 'Vice',\n",
+       " 'Inc',\n",
+       " 'WOR',\n",
+       " \"'\",\n",
+       " 'it',\n",
+       " 'that',\n",
+       " 'as',\n",
+       " '1',\n",
+       " 'its',\n",
+       " '44',\n",
+       " 'for',\n",
+       " ',',\n",
+       " 'WAS',\n",
+       " '.',\n",
+       " 'COTTON',\n",
+       " 'rise',\n",
+       " '.',\n",
+       " 'it',\n",
+       " 'February',\n",
+       " 'by',\n",
+       " 'in',\n",
+       " '16',\n",
+       " 'said',\n",
+       " '-',\n",
+       " 'to']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generated_text"
    ]
   },
   {
